parser/MinicParser.cpp

// Generated from Minic.g4 by ANTLR 4.8


#include "MinicVisitor.h"

#include "MinicParser.h"


using namespace antlrcpp;
using namespace antlr4;

MinicParser::MinicParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MinicParser::~MinicParser() {
  delete _interpreter;
}

std::string MinicParser::getGrammarFileName() const {
  return "Minic.g4";
}

const std::vector<std::string>& MinicParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MinicParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

MinicParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MinicParser::ProgContext::EOF() {
  return getToken(MinicParser::EOF, 0);
}

std::vector<MinicParser::DeclarationContext *> MinicParser::ProgContext::declaration() {
  return getRuleContexts<MinicParser::DeclarationContext>();
}

MinicParser::DeclarationContext* MinicParser::ProgContext::declaration(size_t i) {
  return getRuleContext<MinicParser::DeclarationContext>(i);
}

std::vector<MinicParser::AssignmentContext *> MinicParser::ProgContext::assignment() {
  return getRuleContexts<MinicParser::AssignmentContext>();
}

MinicParser::AssignmentContext* MinicParser::ProgContext::assignment(size_t i) {
  return getRuleContext<MinicParser::AssignmentContext>(i);
}

std::vector<MinicParser::Func_declContext *> MinicParser::ProgContext::func_decl() {
  return getRuleContexts<MinicParser::Func_declContext>();
}

MinicParser::Func_declContext* MinicParser::ProgContext::func_decl(size_t i) {
  return getRuleContext<MinicParser::Func_declContext>(i);
}


size_t MinicParser::ProgContext::getRuleIndex() const {
  return MinicParser::RuleProg;
}


antlrcpp::Any MinicParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

MinicParser::ProgContext* MinicParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, MinicParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(21); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(21);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(18);
        declaration();
        break;
      }

      case 2: {
        setState(19);
        assignment();
        break;
      }

      case 3: {
        setState(20);
        func_decl();
        break;
      }

      }
      setState(23); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == MinicParser::ID

    || _la == MinicParser::TYPE);
    setState(25);
    match(MinicParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declContext ------------------------------------------------------------------

MinicParser::Func_declContext::Func_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MinicParser::Func_declContext::TYPE() {
  return getToken(MinicParser::TYPE, 0);
}

tree::TerminalNode* MinicParser::Func_declContext::ID() {
  return getToken(MinicParser::ID, 0);
}

MinicParser::StatementContext* MinicParser::Func_declContext::statement() {
  return getRuleContext<MinicParser::StatementContext>(0);
}

std::vector<MinicParser::Decl_argContext *> MinicParser::Func_declContext::decl_arg() {
  return getRuleContexts<MinicParser::Decl_argContext>();
}

MinicParser::Decl_argContext* MinicParser::Func_declContext::decl_arg(size_t i) {
  return getRuleContext<MinicParser::Decl_argContext>(i);
}


size_t MinicParser::Func_declContext::getRuleIndex() const {
  return MinicParser::RuleFunc_decl;
}


antlrcpp::Any MinicParser::Func_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitFunc_decl(this);
  else
    return visitor->visitChildren(this);
}

MinicParser::Func_declContext* MinicParser::func_decl() {
  Func_declContext *_localctx = _tracker.createInstance<Func_declContext>(_ctx, getState());
  enterRule(_localctx, 2, MinicParser::RuleFunc_decl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(27);
    match(MinicParser::TYPE);
    setState(28);
    match(MinicParser::ID);
    setState(29);
    match(MinicParser::T__0);
    setState(35);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(30);
        decl_arg();
        setState(31);
        match(MinicParser::T__1); 
      }
      setState(37);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(39);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MinicParser::TYPE) {
      setState(38);
      decl_arg();
    }
    setState(41);
    match(MinicParser::T__2);
    setState(42);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_callContext ------------------------------------------------------------------

MinicParser::Func_callContext::Func_callContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MinicParser::Func_callContext::ID() {
  return getToken(MinicParser::ID, 0);
}

std::vector<MinicParser::ArgContext *> MinicParser::Func_callContext::arg() {
  return getRuleContexts<MinicParser::ArgContext>();
}

MinicParser::ArgContext* MinicParser::Func_callContext::arg(size_t i) {
  return getRuleContext<MinicParser::ArgContext>(i);
}


size_t MinicParser::Func_callContext::getRuleIndex() const {
  return MinicParser::RuleFunc_call;
}


antlrcpp::Any MinicParser::Func_callContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitFunc_call(this);
  else
    return visitor->visitChildren(this);
}

MinicParser::Func_callContext* MinicParser::func_call() {
  Func_callContext *_localctx = _tracker.createInstance<Func_callContext>(_ctx, getState());
  enterRule(_localctx, 4, MinicParser::RuleFunc_call);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(44);
    match(MinicParser::ID);
    setState(45);
    match(MinicParser::T__0);
    setState(51);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(46);
        arg();
        setState(47);
        match(MinicParser::T__1); 
      }
      setState(53);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(55);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MinicParser::T__0)
      | (1ULL << MinicParser::T__17)
      | (1ULL << MinicParser::ID)
      | (1ULL << MinicParser::CHAR)
      | (1ULL << MinicParser::INT)
      | (1ULL << MinicParser::STRING))) != 0)) {
      setState(54);
      arg();
    }
    setState(57);
    match(MinicParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Decl_argContext ------------------------------------------------------------------

MinicParser::Decl_argContext::Decl_argContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MinicParser::Decl_argContext::getRuleIndex() const {
  return MinicParser::RuleDecl_arg;
}

void MinicParser::Decl_argContext::copyFrom(Decl_argContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Decl_argArray1DContext ------------------------------------------------------------------

tree::TerminalNode* MinicParser::Decl_argArray1DContext::TYPE() {
  return getToken(MinicParser::TYPE, 0);
}

tree::TerminalNode* MinicParser::Decl_argArray1DContext::ID() {
  return getToken(MinicParser::ID, 0);
}

MinicParser::Decl_argArray1DContext::Decl_argArray1DContext(Decl_argContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::Decl_argArray1DContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitDecl_argArray1D(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Decl_argArray2DContext ------------------------------------------------------------------

tree::TerminalNode* MinicParser::Decl_argArray2DContext::TYPE() {
  return getToken(MinicParser::TYPE, 0);
}

tree::TerminalNode* MinicParser::Decl_argArray2DContext::ID() {
  return getToken(MinicParser::ID, 0);
}

tree::TerminalNode* MinicParser::Decl_argArray2DContext::INT() {
  return getToken(MinicParser::INT, 0);
}

MinicParser::Decl_argArray2DContext::Decl_argArray2DContext(Decl_argContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::Decl_argArray2DContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitDecl_argArray2D(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Decl_argSimpleContext ------------------------------------------------------------------

tree::TerminalNode* MinicParser::Decl_argSimpleContext::TYPE() {
  return getToken(MinicParser::TYPE, 0);
}

tree::TerminalNode* MinicParser::Decl_argSimpleContext::ID() {
  return getToken(MinicParser::ID, 0);
}

MinicParser::Decl_argSimpleContext::Decl_argSimpleContext(Decl_argContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::Decl_argSimpleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitDecl_argSimple(this);
  else
    return visitor->visitChildren(this);
}
MinicParser::Decl_argContext* MinicParser::decl_arg() {
  Decl_argContext *_localctx = _tracker.createInstance<Decl_argContext>(_ctx, getState());
  enterRule(_localctx, 6, MinicParser::RuleDecl_arg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<Decl_argContext *>(_tracker.createInstance<MinicParser::Decl_argSimpleContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(59);
      match(MinicParser::TYPE);
      setState(60);
      match(MinicParser::ID);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<Decl_argContext *>(_tracker.createInstance<MinicParser::Decl_argArray1DContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(61);
      match(MinicParser::TYPE);
      setState(62);
      match(MinicParser::ID);
      setState(63);
      match(MinicParser::T__3);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<Decl_argContext *>(_tracker.createInstance<MinicParser::Decl_argArray2DContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(64);
      match(MinicParser::TYPE);
      setState(65);
      match(MinicParser::ID);
      setState(66);
      match(MinicParser::T__4);
      setState(67);
      match(MinicParser::INT);
      setState(68);
      match(MinicParser::T__5);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgContext ------------------------------------------------------------------

MinicParser::ArgContext::ArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MinicParser::ArgContext::getRuleIndex() const {
  return MinicParser::RuleArg;
}

void MinicParser::ArgContext::copyFrom(ArgContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ArgStringContext ------------------------------------------------------------------

tree::TerminalNode* MinicParser::ArgStringContext::STRING() {
  return getToken(MinicParser::STRING, 0);
}

MinicParser::ArgStringContext::ArgStringContext(ArgContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::ArgStringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitArgString(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArgExprContext ------------------------------------------------------------------

MinicParser::ExprContext* MinicParser::ArgExprContext::expr() {
  return getRuleContext<MinicParser::ExprContext>(0);
}

MinicParser::ArgExprContext::ArgExprContext(ArgContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::ArgExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitArgExpr(this);
  else
    return visitor->visitChildren(this);
}
MinicParser::ArgContext* MinicParser::arg() {
  ArgContext *_localctx = _tracker.createInstance<ArgContext>(_ctx, getState());
  enterRule(_localctx, 8, MinicParser::RuleArg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MinicParser::STRING: {
        _localctx = dynamic_cast<ArgContext *>(_tracker.createInstance<MinicParser::ArgStringContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(71);
        match(MinicParser::STRING);
        break;
      }

      case MinicParser::T__0:
      case MinicParser::T__17:
      case MinicParser::ID:
      case MinicParser::CHAR:
      case MinicParser::INT: {
        _localctx = dynamic_cast<ArgContext *>(_tracker.createInstance<MinicParser::ArgExprContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(72);
        expr(0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MinicParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MinicParser::StatementContext::getRuleIndex() const {
  return MinicParser::RuleStatement;
}

void MinicParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StatementAssignmentContext ------------------------------------------------------------------

MinicParser::AssignmentContext* MinicParser::StatementAssignmentContext::assignment() {
  return getRuleContext<MinicParser::AssignmentContext>(0);
}

MinicParser::StatementAssignmentContext::StatementAssignmentContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::StatementAssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitStatementAssignment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatementForContext ------------------------------------------------------------------

MinicParser::DeclarationContext* MinicParser::StatementForContext::declaration() {
  return getRuleContext<MinicParser::DeclarationContext>(0);
}

MinicParser::ExprContext* MinicParser::StatementForContext::expr() {
  return getRuleContext<MinicParser::ExprContext>(0);
}

MinicParser::AssignmentContext* MinicParser::StatementForContext::assignment() {
  return getRuleContext<MinicParser::AssignmentContext>(0);
}

MinicParser::StatementContext* MinicParser::StatementForContext::statement() {
  return getRuleContext<MinicParser::StatementContext>(0);
}

MinicParser::StatementForContext::StatementForContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::StatementForContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitStatementFor(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatementDeclarationContext ------------------------------------------------------------------

MinicParser::DeclarationContext* MinicParser::StatementDeclarationContext::declaration() {
  return getRuleContext<MinicParser::DeclarationContext>(0);
}

MinicParser::StatementDeclarationContext::StatementDeclarationContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::StatementDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitStatementDeclaration(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CompoundStatementContext ------------------------------------------------------------------

std::vector<MinicParser::StatementContext *> MinicParser::CompoundStatementContext::statement() {
  return getRuleContexts<MinicParser::StatementContext>();
}

MinicParser::StatementContext* MinicParser::CompoundStatementContext::statement(size_t i) {
  return getRuleContext<MinicParser::StatementContext>(i);
}

MinicParser::CompoundStatementContext::CompoundStatementContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::CompoundStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitCompoundStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatementIfElseContext ------------------------------------------------------------------

MinicParser::ExprContext* MinicParser::StatementIfElseContext::expr() {
  return getRuleContext<MinicParser::ExprContext>(0);
}

std::vector<MinicParser::StatementContext *> MinicParser::StatementIfElseContext::statement() {
  return getRuleContexts<MinicParser::StatementContext>();
}

MinicParser::StatementContext* MinicParser::StatementIfElseContext::statement(size_t i) {
  return getRuleContext<MinicParser::StatementContext>(i);
}

MinicParser::StatementIfElseContext::StatementIfElseContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::StatementIfElseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitStatementIfElse(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatementWhileContext ------------------------------------------------------------------

MinicParser::ExprContext* MinicParser::StatementWhileContext::expr() {
  return getRuleContext<MinicParser::ExprContext>(0);
}

MinicParser::StatementContext* MinicParser::StatementWhileContext::statement() {
  return getRuleContext<MinicParser::StatementContext>(0);
}

MinicParser::StatementWhileContext::StatementWhileContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::StatementWhileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitStatementWhile(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatementRetContext ------------------------------------------------------------------

MinicParser::ExprContext* MinicParser::StatementRetContext::expr() {
  return getRuleContext<MinicParser::ExprContext>(0);
}

MinicParser::StatementRetContext::StatementRetContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::StatementRetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitStatementRet(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatementIfContext ------------------------------------------------------------------

MinicParser::ExprContext* MinicParser::StatementIfContext::expr() {
  return getRuleContext<MinicParser::ExprContext>(0);
}

MinicParser::StatementContext* MinicParser::StatementIfContext::statement() {
  return getRuleContext<MinicParser::StatementContext>(0);
}

MinicParser::StatementIfContext::StatementIfContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::StatementIfContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitStatementIf(this);
  else
    return visitor->visitChildren(this);
}
MinicParser::StatementContext* MinicParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 10, MinicParser::RuleStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(118);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MinicParser::CompoundStatementContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(75);
      match(MinicParser::T__6);
      setState(77); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(76);
        statement();
        setState(79); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << MinicParser::T__6)
        | (1ULL << MinicParser::T__8)
        | (1ULL << MinicParser::T__10)
        | (1ULL << MinicParser::T__12)
        | (1ULL << MinicParser::T__13)
        | (1ULL << MinicParser::ID)
        | (1ULL << MinicParser::TYPE))) != 0));
      setState(81);
      match(MinicParser::T__7);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MinicParser::StatementAssignmentContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(83);
      assignment();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MinicParser::StatementDeclarationContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(84);
      declaration();
      break;
    }

    case 4: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MinicParser::StatementIfContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(85);
      match(MinicParser::T__8);
      setState(86);
      match(MinicParser::T__0);
      setState(87);
      expr(0);
      setState(88);
      match(MinicParser::T__2);
      setState(89);
      statement();
      break;
    }

    case 5: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MinicParser::StatementIfElseContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(91);
      match(MinicParser::T__8);
      setState(92);
      match(MinicParser::T__0);
      setState(93);
      expr(0);
      setState(94);
      match(MinicParser::T__2);
      setState(95);
      statement();
      setState(96);
      match(MinicParser::T__9);
      setState(97);
      statement();
      break;
    }

    case 6: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MinicParser::StatementForContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(99);
      match(MinicParser::T__10);
      setState(100);
      match(MinicParser::T__0);
      setState(101);
      declaration();
      setState(102);
      expr(0);
      setState(103);
      match(MinicParser::T__11);
      setState(104);
      assignment();
      setState(105);
      match(MinicParser::T__2);
      setState(106);
      statement();
      break;
    }

    case 7: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MinicParser::StatementWhileContext>(_localctx));
      enterOuterAlt(_localctx, 7);
      setState(108);
      match(MinicParser::T__12);
      setState(109);
      match(MinicParser::T__0);
      setState(110);
      expr(0);
      setState(111);
      match(MinicParser::T__2);
      setState(112);
      statement();
      break;
    }

    case 8: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MinicParser::StatementRetContext>(_localctx));
      enterOuterAlt(_localctx, 8);
      setState(114);
      match(MinicParser::T__13);
      setState(115);
      expr(0);
      setState(116);
      match(MinicParser::T__11);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

MinicParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MinicParser::AssignmentContext::getRuleIndex() const {
  return MinicParser::RuleAssignment;
}

void MinicParser::AssignmentContext::copyFrom(AssignmentContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AssignmentSimpleContext ------------------------------------------------------------------

tree::TerminalNode* MinicParser::AssignmentSimpleContext::ID() {
  return getToken(MinicParser::ID, 0);
}

MinicParser::ExprContext* MinicParser::AssignmentSimpleContext::expr() {
  return getRuleContext<MinicParser::ExprContext>(0);
}

MinicParser::AssignmentSimpleContext::AssignmentSimpleContext(AssignmentContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::AssignmentSimpleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitAssignmentSimple(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignmentArrayElement1dContext ------------------------------------------------------------------

tree::TerminalNode* MinicParser::AssignmentArrayElement1dContext::ID() {
  return getToken(MinicParser::ID, 0);
}

std::vector<MinicParser::ExprContext *> MinicParser::AssignmentArrayElement1dContext::expr() {
  return getRuleContexts<MinicParser::ExprContext>();
}

MinicParser::ExprContext* MinicParser::AssignmentArrayElement1dContext::expr(size_t i) {
  return getRuleContext<MinicParser::ExprContext>(i);
}

MinicParser::AssignmentArrayElement1dContext::AssignmentArrayElement1dContext(AssignmentContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::AssignmentArrayElement1dContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitAssignmentArrayElement1d(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignmentArrayElement2dContext ------------------------------------------------------------------

tree::TerminalNode* MinicParser::AssignmentArrayElement2dContext::ID() {
  return getToken(MinicParser::ID, 0);
}

std::vector<MinicParser::ExprContext *> MinicParser::AssignmentArrayElement2dContext::expr() {
  return getRuleContexts<MinicParser::ExprContext>();
}

MinicParser::ExprContext* MinicParser::AssignmentArrayElement2dContext::expr(size_t i) {
  return getRuleContext<MinicParser::ExprContext>(i);
}

MinicParser::AssignmentArrayElement2dContext::AssignmentArrayElement2dContext(AssignmentContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MinicParser::AssignmentArrayElement2dContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MinicVisitor*>(visitor))
    return parserVisitor->visitAssignmentArrayElement2d(this);
  else
    return visitor->visitChildren(this);
}
MinicParser::AssignmentContext* MinicParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 12, MinicParser::RuleAssignment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(143);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<AssignmentContext *>(_tracker.createInstance<MinicParser::AssignmentSimpleContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(120);
      match(MinicParser::ID);
      setState(121);
      match(MinicParser::T__14);
      setState(122);
      expr(0);
      setState(123);
      match(MinicParser::T__11);
      break;
    }
